# initial_setup

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  logging.yaml  pyproject.toml  setup.cfg  setup.sh
